Moyenne /1 an par user Fiabilisation des données sans passer par le ReservingName Récupération des infos user par le biais de l'API keycloak

--- a/GestionPlacesParking/Pages/Customs/History.cshtml
+++ b/GestionPlacesParking/Pages/Customs/History.cshtml
@@ -55,13 +55,13 @@ else
             @foreach (var historyLocal in Model.HistoryLocal.HistoryListLocal)
             {
                 <tr>
-                    <td>@historyLocal.Utilisateur</td>
+                    <td>@historyLocal.FullName</td>
                     <td>@historyLocal.NbReservations</td>
                     <td>@historyLocal.MoyenneAnnee</td>
                 </tr>
 
                 //On ajoute les subrows sur l'utilisateur
-                @if(Model.HistoryFilterDto.Choix > (int)HistoryLocal.Choix.Mois)
+                @if(Model.HistoryFilterDto != null && (Model.HistoryFilterDto.Choix > (int)HistoryLocal.Choix.Mois))
                 {
                     
                 }
