--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -14,6 +14,7 @@
 
     int firstId = Model.ParkingSlotList.First().Id;
     var requestToken = Antiforgery.GetAndStoreTokens(HttpContext).RequestToken;
+    bool isDayReserved = false;
 }
 
 <h1 class="display-6">Places de parking du @Model.Day.DaysOfTheWeek.Keys.First() @Model.Day.DaysOfTheWeek.Values.First() au @Model.Day.DaysOfTheWeek.Keys.ElementAt(4) @Model.Day.DaysOfTheWeek.Values.ElementAt(4)</h1>
@@ -33,6 +34,13 @@
             @*Règle métier: Le samedi et le dimanche on ne fait pas de réservation*@
             @if (DayOfTheWeek.Key != "Samedi" && DayOfTheWeek.Key != "Dimanche")
             {
+                bool isMyReservation = Model.ReservationList.Where(
+                    x => x.ReservationDate == DateTime.Parse(DayOfTheWeek.Value) &&
+                    x.ProprietaireId == userId
+                ).Any();
+
+                isDayReserved = (isMyReservation) ? true : isDayReserved;
+
                 <tr>
                     <td class="col-md-1">@DayOfTheWeek.Key</td>
                     @for (int i = firstId; i < (firstId + Model.ParkingSlotList.Count); i++)
@@ -50,7 +58,7 @@
                         if (findReservation != null)
                         {
                             string style = (findReservation.ProprietaireId == userId) ? "btn-orange-apside" : "btn-danger";
-                            string isOwner = (findReservation.ProprietaireId == userId || isAdmin != null) ? "openDeleteReservationModal(event)" : "";
+                            string owner = (findReservation.ProprietaireId == userId || isAdmin != null) ? "openDeleteReservationModal(event)" : "";
 
                             if(findParkingSlot != null)
                             {
@@ -58,7 +66,7 @@
 
                                 <td class="col-md-2 justify-content-center text-center">
                                     @*On inject l'ID de la réservation pour pouvoir ensuite la supprimer*@
-                                    <button id="@formatStringForJs" class="btn @style" onClick="@isOwner">
+                                    <button id="@formatStringForJs" class="btn @style" onClick="@owner">
                                         @findReservation.ReservingName
                                     </button>
                                 </td>
@@ -70,12 +78,15 @@
                             {
                                 string dayAndReservationId = String.Format("{0}_{1}_{2}_{3}", findParkingSlot.Label, DayOfTheWeek.Key, DayOfTheWeek.Value, i);
                                 @*On inject un ID pour le récupérer facilement dans le JS pour faire la requete de création d'une réservation*@
-                                <td class="col-md-2 justify-content-center text-center"><button id="@dayAndReservationId" class="btn bg-success p-3" onClick="openMakeReservationModal(event)"></button></td>
+                                <td class="col-md-2 justify-content-center text-center">
+                                    <button id="@dayAndReservationId" class="btn bg-success p-3" onClick="@(isDayReserved == false ? "openMakeReservationModal(event)" : "")"></button>
+                                </td>
                             }
                         }
                     }
                 </tr>
             }
+            isDayReserved = false;
         }
     </tbody>
 </table>
