Ajout du total de réservations par User

--- a/GestionPlacesParking/Pages/Customs/History.cshtml
+++ b/GestionPlacesParking/Pages/Customs/History.cshtml
@@ -113,8 +113,8 @@ else
                         {
                             <tr class="table-active">
                                 <td><b>@historyLocal.FullName</b></td>
-                                <td class="text-center"></td>
-                                <td class="text-center">@historyLocal.MoyenneAnnee</td>
+                                <td class="text-center"><b>@historyLocal.TotalReservations</b></td>
+                                <td class="text-center"><b>@historyLocal.MoyenneAnnee</b></td>
                             </tr>
 
                             @foreach (var historyMonthsLocal in Model.HistoryLocal.HistoryUserMonthsListLocal)
