--- a/GestionPlacesParking/Pages/Customs/Profile.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Profile.cshtml
@@ -3,6 +3,34 @@
 @model GestionPlacesParking.Web.UI.Pages.Customs.ProfileModel
 @{
     Layout = CorrectLayoutCustomMethod.GetCorrectLayout(HttpContext);
+
+    var test = new Chart();
 }
 
-<h1 class="display-6">Mon Profile</h1>
+<h1 class="display-6">Tableau de mes réservations sur l'année </h1>
+<span class="text-dark">Moyenne de mes réservations sur l'année : <b>@string.Format("{0:F1}", Model.ProfileLocal.MaMoyenneAnnee)</b> j/mois</span>
+<table class="table table-bordered mt-3">
+    <thead>
+        <tr>
+            <th scope="col" class="text-center">Mois</th>
+            <th scope="col" class="text-center">Nombre de jours réservés</th>
+            <th scope="col" class="text-center">Moyenne réservations /mois</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var profileUserMonthsLocal in Model.ProfileLocal.ProfileUserMonthsListLocal)
+        {
+            <tr>
+                <td class="text-center">@profileUserMonthsLocal.MoisString</td>
+                <td class="text-center">@profileUserMonthsLocal.NbReservations</td>
+                <td class="text-center">@string.Format("{0:F1}", profileUserMonthsLocal.MoyenneMois)</td>
+            </tr>
+        }
+
+        <tr>
+            <td class="text-center"><b>TOTAL</b></td>
+            <td class="text-center"><b>@Model.ProfileLocal.TotalReservations</b></td>
+            <td class="text-center"><b>@string.Format("{0:F1}", @Model.ProfileLocal.MoyenneAnnee)</b></td>
+        </tr>
+    </tbody>
+</table>
