--- a/GestionPlacesParking/Pages/Customs/History.cshtml
+++ b/GestionPlacesParking/Pages/Customs/History.cshtml
@@ -71,7 +71,7 @@ else
         <h1 class="display-6 mt-5">Tableau des réservations de l'année @Model.HistoryLocal.Annee</h1>
     }
 
-    <span class="text-dark">Moyenne des réservations sur le Mois courant : <b>@string.Format("{0:F1}", Model.HistoryLocal.MoyenneReservations)</b> j</span>
+    <span class="text-dark">Moyenne des réservations sur le Mois courant : <b>@Model.HistoryLocal.MoyenneReservations</b> j</span>
     <table class="table table-bordered mt-3">
         <thead>
             <tr>
@@ -90,7 +90,7 @@ else
                         <tr>
                             <td><b>@historyLocal.FullName</b></td>
                             <td class="text-center">@historyLocal.NbReservations</td>
-                            <td class="text-center">@string.Format("{0:F1}", historyLocal.MoyenneAnnee)</td>
+                            <td class="text-center">@historyLocal.MoyenneAnnee</td>
                         </tr>
                     }
                 }
@@ -112,7 +112,7 @@ else
                             <tr class="table-secondary">
                                 <td><b>@historyLocal.FullName</b></td>
                                 <td class="text-center"><b>@historyLocal.TotalReservations</b></td>
-                                <td class="text-center"><b>@string.Format("{0:F1}", historyLocal.MoyenneAnnee)</b></td>
+                                <td class="text-center"><b>@historyLocal.MoyenneAnnee</b></td>
                             </tr>
 
                             @foreach (var historyMonthsLocal in Model.HistoryLocal.HistoryUserMonthsListLocal)
