Refacto DayRepository Refacto Enums -> GetName au lieu de l'utilisation de Utils

--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -18,6 +18,7 @@
 }
 
 <h1 class="display-6">Places de parking du @Model.Day.DaysOfTheWeek.Keys.First() @Model.Day.DaysOfTheWeek.Values.First() au @Model.Day.DaysOfTheWeek.Keys.ElementAt(4) @Model.Day.DaysOfTheWeek.Values.ElementAt(4)</h1>
+<span class="text-dark">Attention : Réservable jusqu'à Vendredi 11h00. Après cette heure on passe aux réservations de la semaine suivante.</span>
 <table class="table">
     <thead>
         <tr>
