Corrections bugs - Day repository - HistoryLocalRepository

--- a/GestionPlacesParking/Pages/Customs/History.cshtml
+++ b/GestionPlacesParking/Pages/Customs/History.cshtml
@@ -71,7 +71,7 @@ else
         <h1 class="display-6 mt-5">Tableau des réservations de l'année @Model.HistoryLocal.Annee</h1>
     }
 
-    <span class="text-dark">Moyenne des réservations sur le Mois courant : <b>@Model.HistoryLocal.MoyenneReservations</b> j</span>
+    <span class="text-dark">Moyenne des réservations sur le Mois courant : <b>@Model.HistoryLocal.MoyenneReservationsMois</b> j</span>
     <table class="table table-bordered mt-3">
         <thead>
             <tr>
