--- a/GestionPlacesParking/Pages/Shared/_AdminLayout.cshtml
+++ b/GestionPlacesParking/Pages/Shared/_AdminLayout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link" asp-area="" asp-page="/Customs/Index">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Customs/Profile">Mon Profile</a>
+                            <a class="nav-link" asp-area="" asp-page="/Customs/Profile">Mon Profil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Customs/History">Historique</a>
