--- a/GestionPlacesParking/Pages/Shared/_Layout.cshtml
+++ b/GestionPlacesParking/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="utf-8" />
@@ -24,7 +24,7 @@
                             <a class="nav-link" asp-area="" asp-page="/Customs/Index">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Customs/Profile">Mon Profile</a>
+                            <a class="nav-link" asp-area="" asp-page="/Customs/Profile">Mon Profil</a>
                         </li>
                     </ul>
                     <a class="text-light" asp-area="" asp-page="/Customs/Logout">
